fix some forms style bleedthrough from Viewer

--- a/src/debug-panel/evaluate/evaluate.less
+++ b/src/debug-panel/evaluate/evaluate.less
@@ -14,6 +14,7 @@ author-evaluate-panel {
         border-bottom: 1px solid @gray-lighter;
 
         #evaluate-input {
+            min-height: initial; // clear collision from viewer styles
             width: 270px;
         }
 
